RESOLVED FIXED193104
[GLIB] WebDriver: browser close not correctly detected on session close in some cases
https://bugs.webkit.org/show_bug.cgi?id=193104
Summary [GLIB] WebDriver: browser close not correctly detected on session close in so...
Carlos Garcia Campos
Reported 2019-01-03 07:25:44 PST
This happens when the dbus connection is closed right before the response to SendMessageToBackend message is going to be sent. In that case, g_dbus_connection_call async ready handler generates an error before the close signal is emitted. Then the close commands try to handle the error checking if SessionHost::isConnected(), but it still returns true, because the browser is still still alive, but the dbus connection has been closed.
Attachments
Patch (1.85 KB, patch)
2019-01-03 07:28 PST, Carlos Garcia Campos
no flags
Patch (1.84 KB, patch)
2019-01-03 07:33 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2019-01-03 07:28:16 PST
EWS Watchlist
Comment 2 2019-01-03 07:30:05 PST
Attachment 358252 [details] did not pass style-queue: ERROR: Source/WebDriver/glib/SessionHostGlib.cpp:112: Extra space before last semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3 2019-01-03 07:33:09 PST
Carlos Garcia Campos
Comment 4 2019-01-04 03:34:08 PST
Radar WebKit Bug Importer
Comment 5 2019-01-04 03:41:48 PST
Note You need to log in before you can comment on or make changes to this bug.